# fry-on-wayru-os

./: .env.example  .gitignore  Makefile  README.md  base-config.toml  justfile  pyproject.toml  requirements.txt
profiles/apocalypse/: profile-config.toml
profiles/apocalypse-installer/: profile-config.toml
profiles/apocalypse-installer/patches/: dts.patch
profiles/ares/: profile-config.toml
profiles/ares/uci-defaults/: 90-firewall-config  99-wireless-operator
profiles/aria/: profile-config.toml
profiles/aria/uci-defaults/: 90-firewall-config  99-wireless-operator
profiles/arm64-generic/: profile-config.toml
profiles/atenea/: profile-config.toml
profiles/chronos/: profile-config.toml
profiles/chronos/uci-defaults/: 99-wireless-operator
profiles/deimos/: profile-config.toml
profiles/deimos-installer/: profile-config.toml
profiles/deimos-installer/uci-defaults/: 99-wireless-operator
profiles/deimos/uci-defaults/: 90-firewall-config  99-openwisp-onboard  99-wireless-operator
profiles/gaia/: profile-config.toml
profiles/genesis/: profile-config.toml
profiles/genesis/uci-defaults/: 90-firewall-config  99-openwisp-onboard  99-wireless-operator
profiles/helios/: profile-config.toml
profiles/helios/uci-defaults/: 99-openwisp-onboard
profiles/hemera/: profile-config.toml
profiles/loki/uci-defaults/: 90-network-ip
profiles/odyssey/: profile-config.toml
profiles/odyssey/patches/: dts.patch  image.patch  leds.patch  network.patch
profiles/odyssey/uci-defaults/: 90-firewall-config  90-network-ip  99-openwisp-onboard  99-radsec-config  99-wireless-operator
profiles/prometheus/: profile-config.toml
profiles/prometheus-installer/: profile-config.toml
profiles/prometheus-installer/patches/: dts.patch
profiles/prometheus-installer/uci-defaults/: 99-wireless-operator
profiles/prometheus/uci-defaults/: 90-network-ip  99-wireless-operator
profiles/voyage-installer/: profile-config.toml
profiles/voyage-installer/uci-defaults/: 90-dhcp-config  90-firewall-config  90-network-ip  99-wireless-operator
profiles/x86-desktop/: profile-config.toml
profiles/x86-generic/: profile-config.toml
profiles/zeus/: profile-config.toml
profiles/zeus-p/: profile-config.toml
profiles/zeus-p/uci-defaults/: 90-dhcp-config  90-network-ip  99-openwisp-onboard  99-wireless-operator
profiles/zeus/uci-defaults/: 90-firewall-config  99-firewall-config  99-openwisp-onboard  99-wireless-operator
resources/: ascii-logo
tools/: add_patches.py  build-image.py  build-rootfs.py  compress-image.py  configure-fry.py  configure-network.py  configure.py  upload-build.py  validate-image.py
